--- a/package.json
+++ b/package.json
@@ -9,37 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "next": "15.3.1",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "15.3.1",
-    "@prisma/client": "^5.10.0",
-    "@stripe/stripe-js": "^2.4.0",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.22.4",
     "react-hook-form": "^7.50.1",
-    "@hookform/resolvers": "^3.3.4",
-    "date-fns": "^3.3.1",
-    "react-icons": "^5.0.1",
     "react-hot-toast": "^2.4.1",
-    "cloudinary": "^2.0.0",
+    "react-icons": "^5.0.1",
     "sharp": "^0.33.2",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
     "@eslint/eslintrc": "^3",
-    "prisma": "^5.10.0",
+    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "prisma": "^5.10.0",
+    "tailwindcss": "^4",
     "typescript": "^5.3.3"
   }
 }
