Fix image handling and display: Add isDefault flag to images, update image upload flow, add placeholder SVG, improve error handling

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/parts_and_bids"
 NEXTAUTH_SECRET="your-secret-key-here"
 NEXTAUTH_URL="http://localhost:3000"
-AWS_REGION="us-east-1"
+AWS_REGION="us-east-2"
 AWS_ACCESS_KEY_ID="your-access-key-id"
 AWS_SECRET_ACCESS_KEY="your-secret-access-key"
-AWS_BUCKET_NAME="your-bucket-name" 
+AWS_BUCKET_NAME="parts-and-bids-uploads"
+NEXT_PUBLIC_AWS_REGION="us-east-2"
+NEXT_PUBLIC_AWS_BUCKET_NAME="parts-and-bids-uploads" 
